--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 node_js:
   - "0.12"
 before_script:
-  - npm update
+  - npm install -g gulp
+  - npm install -g bower
   - bower update
 script: gulp
