--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,7 @@ before_script:
   - npm install -g bower
   - bower update
 script: gulp
+notifications:
+  email:
+    on_success: never
+    on_failure: never
