--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "karma": "~0.13.10",
     "karma-jasmine": "~0.3.6",
     "karma-phantomjs-launcher": "~0.2.1",
+    "minimist": "1.2.0",
     "phantomjs": "~1.9.18",
     "karma-angular-filesort": "~1.0.0",
     "karma-coverage": "~0.5.2",
@@ -47,6 +48,7 @@
     "http-proxy-middleware": "~0.9.0",
     "chalk": "~1.1.1",
     "uglify-save-license": "~0.4.1",
+    "vinyl-ftp": "0.4.5",
     "wrench": "~1.5.8"
   },
   "engines": {
