--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {},
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "serve": "gulp serve"
   },
   "devDependencies": {
     "estraverse": "~4.2.0",
